--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="painel">
-        <h1>Feliz 2 Meses de Namoro</h1>
+        <h1>Feliz 2 Meses de Namoro!</h1>
 
         <img src="./ursinho-fofo-apaixonado.gif" alt="">
 
