--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <img src="./ursinho-fofo-apaixonado.gif" alt="">
 
-        <h2>Aceita Namorar Comigo?</h2>
+        <h2>Aceita ficar comigo pra sempre?</h2>
         
         <a href="https://www.youtube.com/watch?v=7pOr3dBFAeY" target="_blank"><button id="sim"> SIM! </button></a>
         <button id="nao" onmouseover="fuja()"> NÃO! </button>
