--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Love You</title>
+    <link rel="shortcut icon" href="./icon_258fea4e83f62e7cb15eee3db5f900b5.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
