--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h2>Aceita ficar comigo pra sempre?</h2>
         
-        <a href="https://www.youtube.com/watch?v=7pOr3dBFAeY" target="_blank"><button id="sim"> SIM! </button></a>
+        <a href="https://open.spotify.com/playlist/5Gnjw6xWPT3L2CkAUtEg0T?si=b66816bb132e4651" target="_blank"><button id="sim"> SIM! </button></a>
         <button id="nao" onmouseover="fuja()"> NÃO! </button>
 
     </div>
